# ros-cubeeye-mtf

./: CMakeLists.txt  README  README.md  mtfinstall.sh  package.xml
cfg/: mtf_depth.cfg
launch/: depth_camera.launch
lib/: libMTF_API.so.1  libusb-1.0.so.0.1.0
src/: DepthMTFNode.cpp  DepthMTFReader.cpp  DepthMTFReader.h
src/include/: MTF_API.h
